{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "a88f360e-b5e8-569a-619b-2cd8ddce877e",
  "resources": [
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "coalfire_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "coalfire_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "coalfire_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:692859941638:targetgroup/coalfire-target-group/3c462d8801bc1eb6",
            "arn_suffix": "targetgroup/coalfire-target-group/3c462d8801bc1eb6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:692859941638:targetgroup/coalfire-target-group/3c462d8801bc1eb6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coalfire-target-group",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "coalfire"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "coalfire"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "dependencies": [
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "coalfire_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007786d947b107e94",
            "arn": "arn:aws:ec2:us-east-2:692859941638:elastic-ip/eipalloc-007786d947b107e94",
            "associate_with_private_ip": "true",
            "domain": "vpc",
            "id": "eipalloc-007786d947b107e94",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-147-203-65.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.203.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "coalfire_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:internet-gateway/igw-0ac72b9847a1a9aac",
            "id": "igw-0ac72b9847a1a9aac",
            "owner_id": "692859941638",
            "tags": {
              "Name": "coalfire-igw"
            },
            "tags_all": {
              "Name": "coalfire-igw"
            },
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "dependencies": [
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "coalfire_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac72b9847a1a9aac",
            "id": "r-rtb-0de054b5c8d8e04761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de054b5c8d8e0476",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.coalfire_internet_gateway",
            "module.networking.aws_route_table.coalfire_public_rt",
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "coalfire_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:route-table/rtb-057a5f44ca1b028a8",
            "id": "rtb-057a5f44ca1b028a8",
            "owner_id": "692859941638",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "coalfire-private-rt"
            },
            "tags_all": {
              "Name": "coalfire-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "coalfire_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:route-table/rtb-0de054b5c8d8e0476",
            "id": "rtb-0de054b5c8d8e0476",
            "owner_id": "692859941638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac72b9847a1a9aac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "coalfire-public-rt"
            },
            "tags_all": {
              "Name": "coalfire-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "coalfire_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "coalfire_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coalfire_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:security-group/sg-0a0a9e3289813fb7f",
            "description": "Allow SSH from bastion and HTTP from web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0a9e3289813fb7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d52dd35ce6b385c2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coalfire-private-sg",
            "name_prefix": "",
            "owner_id": "692859941638",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.coalfire_public_sg",
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coalfire_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:security-group/sg-0d52dd35ce6b385c2",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d52dd35ce6b385c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coalfire-public-sg",
            "name_prefix": "",
            "owner_id": "692859941638",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f45de99b9f3e911"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.coalfire_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "coalfire_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692859941638:vpc/vpc-01f45de99b9f3e911",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a4862b46ceaca865",
            "default_route_table_id": "rtb-0bf49e8a4bc63019a",
            "default_security_group_id": "sg-09c703edec7289f35",
            "dhcp_options_id": "dopt-0a6c4326479b11aca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f45de99b9f3e911",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf49e8a4bc63019a",
            "owner_id": "692859941638",
            "tags": {
              "Name": "coalfire-vpc"
            },
            "tags_all": {
              "Name": "coalfire-vpc"
            }
          }
        }
      ]
    }
  ]
}